# hush-engine

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PUBLISH.md  README.md  pyproject.toml
docs/: DEBUGGING_DETECTIONS.md  PII_REFERENCE.md  PRECISION_IMPROVEMENTS.md
hush_engine/: __init__.py  detection_config.py  image_optimizer.py  library_manager.py  locale_manager.py  rpc_server.py  scrub_image.py
hush_engine/anonymizers/: spreadsheet_anonymizer.py
hush_engine/calibration/: __init__.py  weight_calibrator.py
hush_engine/data/: __init__.py  cities_database.py  companies_database.py  countries_database.py  curated_names.py  names_database.py  negative_gazetteer.py
hush_engine/detectors/: __init__.py  address_verifier.py  barcode_detector.py  company_verifier.py  credential_entropy.py  face_detector.py  feature_extractor.py  heuristic_verifier.py  lgbm_ner.py  lgbm_preloader.py  llm_verifier.py  locale.py  medical_recognizer.py  ocr_filter.py  person_recognizer.py  pii_detector.py  qr_detector.py  spatial_filter.py  table_detector.py  validators.py
hush_engine/ocr/: vision_ocr.py
hush_engine/pdf/: pdf_processor.py
hush_engine/preprocessing/: __init__.py  image_optimizer.py  text_normalizer.py
hush_engine/ui/: file_router.py
tests/: benchmark_accuracy.py  benchmark_history.html  benchmark_server.py  test_accuracy_loop.py  test_pii_accuracy.py
tools/: AI4PRIVACY_INTEGRATION.md  analyze_dataset_quality.py  calibrate_thresholds.py  convert_ai4privacy.py  create_golden_set.py  create_synthetic_golden.py  debug_presidio_decisions.py  external_data_loader.py  feedback_analyzer.py  ingest_popular_names.py  train_lgbm_ner.py  training_augmentation.py
training/: README.md
training/analysis/: analysis_2026-02-02_13-39-46.json  claude_actions.json  processed_feedback.json
training/feedback/: feedback_2026-02-02_13-08-58_3FE10470.json  feedback_2026-02-02_13-08-59_2F87E507.json  feedback_2026-02-02_13-14-31_B89BF1B3.json  feedback_2026-02-02_13-23-32_41C614DA.json  feedback_2026-02-02_13-23-46_688DFBEE.json  feedback_2026-02-02_13-24-39_4369E6D6.json  feedback_2026-02-02_13-26-14_B0A99FA4.json  feedback_2026-02-02_13-26-27_F1C7B668.json  feedback_2026-02-02_13-26-42_EA7CB106.json  feedback_2026-02-02_13-27-02_729EC8AC.json  feedback_2026-02-02_13-27-13_42F5247F.json  feedback_2026-02-02_13-27-26_3137671A.json  (+81 more)
(+13 files in other folders)
